--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+*.iml
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/profiles_settings.xml
+.idea/modules.xml
+.idea/vcs.xml
